color change for featured authors text, spacing for multi text boxes, fixing dropdowns with replacement bs5 class and border style for danger boxes

--- a/app/javascript/frontend/styles/_common.scss
+++ b/app/javascript/frontend/styles/_common.scss
@@ -634,6 +634,7 @@ h4,
 
     .multiple-member {
       display: inline;
+      color: $black;
 
       &:not(:last-child)::after {
         content: '; ';
